2018-06-05      James   addNode                 Solve the problem of adding nodes and failing IP authentication will also add success.
2018-06-05      James   NERelation              The field link_type was added to the database, and the linkType attribute was added to the NERelation class.
2018-06-06      James   NetElement              Add NEs and Editing NEs have Added IP and Name Do Not Repeat Authentication.
2018-06-07      James   Node                    Add Nodes have Added IP and Name Do Not Repeat Authentication.
2018-06-07      James   QNCRate                 Add QNCRate's real-time curve and history line display.
2018-06-11      James   Version                 Version for QKD NMS_Server_18.05.R04.S01.
2018-06-28      James   QNCRate                 Add QNCRate from SNMPTrap.
2018-06-28      James   Alarm                   Add QNCAlarm from SNMPTrap.
2018-06-28      James   NERelation              Add QTNRelation from SNMPGet.
2018-07-03      James   SnmpTrap                Some logic judgment code parts have been modified.
2018-07-03      James   NMS                     Uniformly modified package name, project name, path.
2018-07-04      James   Module                  Created a new module named idqqtec-dess.
2018-07-06      James   SSD                     Added method for obtaining basic memory information of SSD.
2018-07-06      James   Mysql                   Added method to get basic information of Mysql.
2018-07-09      James   SSD                     Added a pop-up alarm when the remaining size of the SSD disk capacity is less than 20%.
2018-07-09      James   Topology                Added topology on the index page.
2018-07-10      James   Alarms                  Added alarm module.
2018-07-10      James   Others                  Added others modules that contain Security Memory.
2018-07-11      James   Debug                   Modified some bugs.
2018-08-24      James   Log

