@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.100.21:3306/NMS?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://192.168.100.21:3306/QNMS?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=123456
 
